--- a/css/qconsole.css
+++ b/css/qconsole.css
@@ -5,6 +5,7 @@
 	width: 100%;
 	display: none;
 	overflow: hidden;
+    z-index: 9999;
 }
 
 .qc-textarea {
@@ -16,7 +17,7 @@
 
 .qc-console {
 	width: 100%;
-	background: rgba(0,0,0,0.8);
+	background: rgba(0,0,0,0.85);
 	height: 100%;
 	position: relative;
 	top: 0px;
@@ -26,7 +27,7 @@
 	font-size: 12px;
 }
 
-.qc-input {
+input[type="text"].qc-input {
 	position: absolute;	
 	padding: 10px;
 	width: 100%;
