--- a/css/qconsole.css
+++ b/css/qconsole.css
@@ -28,7 +28,7 @@ div.qc-wrapper {
 	font-size: 12px;
 }
 
-.qc-wrapper input[type="text"].qc-input {
+.qc-wrapper input {
 	position: absolute;	
 	padding: 10px;
 	width: 100%;
@@ -44,7 +44,18 @@ div.qc-wrapper {
 	color: red;
 }
 
-.qc-italic {
+.qc-input {
+	float: left;
+	display: block;
+	padding-left: 5px;
+}
+
+.qc-br {
+	display: block;
+	clear: both;
+}
+
+.qc-i {
 	font-style: italic;
 }
 
@@ -52,16 +63,15 @@ div.qc-wrapper {
 	display: block;
 }
 
-.qc-tab {
-	padding: 0 20px;
-}
-
-.qc-tab-2 {
-	padding: 0 40px;
+.qc-result {
+	float: left;
+	display: block;
+	padding-left: 5px;
+	margin-bottom: 5px;
 }
 
 .qc-output-cur {
+	float: left;
 	color: yellow;
 	font-size: 10px;
-	padding: 0 10px;
 }
